2004-11-24  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am (test_programs): Add utf8-validate.

	* tests/utf8-validate.c: Unit tests for g_utf8_validate().

2004-11-23  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.h: Don't mark g_option_error_quark() as const,
	to be consistent with all the other error_quark functions. 
	(technically they are const, but since these are called only
	in error paths, giving the compiler better optimization 
	opportunities doesn't matter much)

2004-11-23  Matthias Clasen  <mclasen@redhat.com>

	Fix a problem with the PLT reduction changes which caused the
	internal aliases to lose all attributes.
	
	* glib/glib.symbols: Add attribute annotations.
	* glib/makegalias.pl: Keep attribute annotations, but strip PRIVATE.
	* glib/Makefile.am (glib.def): Strip attribute annotations, but keep 
	PRIVATE.

2004-11-21  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc : updated

2004-11-16  Matthias Clasen  <mclasen@redhat.com>

	* m4macros/glib-2.0.m4 (AM_PATH_GLIB_2_0): Support gmodule-no-export.

	* Makefile.am (EXTRA_DIST): 
	* configure.in (AC_CONFIG_FILES): Add gmodule-no-export-2.0.pc.in 

	* gmodule-no-export-2.0.pc.in: Add a variants of gmodule-2.0.pc.in
	which doesn't add -Wl,--export-dynamic, since Pango or GTK+ don't
	need it.  (#125627, Owen Taylor)

2004-11-17  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Define S_ISREG() on windows, since it
	is not present there.  (#158469, Kazuki IWAMOTO)

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c (g_key_file_load_from_fd): Use S_ISREG(), since
	S_IFMT and S_IFREG are apprarently missing on some systems (they 
	are SUS, but not Posix).  (#158263)

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.5.6 ===
	
2004-11-11  J. Ali Harlow  <ali@juiblex.co.uk>

	* gobject/Makefile.am:
	* glib/Makefile.am (gtk.def): Use embedded tab rather than '\t'
	escape sequence. (#157951)
